fix vert align for home items for safari and ios

--- a/app/static/css/_home.styl
+++ b/app/static/css/_home.styl
@@ -68,6 +68,7 @@ body
 
 .home-list
   display: block
+  overflow: hidden
   max-width: 1078px
   margin: 0 auto
   padding: 0
@@ -75,6 +76,7 @@ body
   text-align: left
 
 .home-item
+  float: left
   display: inline-block
   margin: 4px
   height: 90px
